force-app/main/default/objects/PA_Challenge__c/PA_Challenge__c.object-meta.xml
<CustomObject>
    <label>PA Challenge</label>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>PA Challenge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>