force-app/main/default/objects/PA_Challenge__c/fields/Challenge_1__c.field-meta.xml
<CustomField>
    <fullName>Challenge_1__c</fullName>
    <label>Challenge 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>