force-app/main/default/objects/PA_Challenge__c/fields/Diff_bw_6_and_1__c.field-meta.xml
<CustomField>
    <fullName>Diff_bw_6_and_1__c</fullName>
    <description>Difference between challenge 6 and Challenge 1</description>
    <formula>Challenge_6__c -  Challenge_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff bw 6 and 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>