force-app/main/default/objects/PA_Challenge__c/fields/Difference_Between_First_and_Last__c.field-meta.xml
<CustomField>
    <fullName>Difference_Between_First_and_Last__c</fullName>
    <formula>Last_Challenge_Completed_Result__c - Challenge_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Between First and Last</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>