force-app/main/default/objects/PA_Challenge__c/fields/Last_Challenge_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Challenge_Completed__c</fullName>
    <label>Last Challenge Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Challenge 1</fullName>
            </value>
            <value>
                <fullName>Challenge 2</fullName>
            </value>
            <value>
                <fullName>Challenge 3</fullName>
            </value>
            <value>
                <fullName>Challenge 4</fullName>
            </value>
            <value>
                <fullName>Challenge 5</fullName>
            </value>
            <value>
                <fullName>Challenge 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>