force-app/main/default/objects/PA_Challenge__c/fields/Last_Challenge_Completed_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Challenge_Completed_Result__c</fullName>
    <formula
  >CASE(Last_Challenge_Completed__c, &apos;Challenge 1&apos;, Challenge_1__c, &apos;Challenge 2&apos;, Challenge_2__c, &apos;Challenge 3&apos;, Challenge_3__c, &apos;Challenge 4&apos;, Challenge_4__c, &apos;Challenge 5&apos;, Challenge_5__c, &apos;Challenge 6&apos;, Challenge_6__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Challenge Completed Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>