force-app/main/default/objects/PA_Challenge__c/fields/Limit_to_Whole_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Limit_to_Whole_Numbers__c</fullName>
    <formula
  >IF(Measurement__c == &apos;Number Completed&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit to Whole Numbers</label>
    <type>Checkbox</type>
</CustomField>