force-app/main/default/objects/PA_Challenge__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <formula>CASE(Title__c, 
&apos;Physical Activity Strength Challenge 1 – Low Plank&apos;, &apos;Time in Seconds&apos;,
&apos;Physical Activity Strength Challenge 2 – Push-ups&apos;, &apos;Number Completed&apos;,
&apos;Physical Activity Endurance Challenge – Shuttle Run&apos;, &apos;Time in Seconds&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measurement</label>
    <type>Text</type>
</CustomField>