force-app/main/default/objects/PA_Challenge__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >Physical Activity Strength Challenge 1 – Low Plank</fullName>
                <label
        >Physical Activity Strength Challenge 1 – Low Plank</label>
            </value>
            <value>
                <fullName
        >Physical Activity Strength Challenge 2 – Push-ups</fullName>
                <label>Physical Activity Strength Challenge 2 – Push-ups</label>
            </value>
            <value>
                <fullName
        >Physical Activity Endurance Challenge – Shuttle Run</fullName>
                <label
        >Physical Activity Endurance Challenge – Shuttle Run</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>