force-app/main/default/objects/PA_Challenge__c/fields/Youth_in_Program_Report__c.field-meta.xml
<CustomField>
    <fullName>Youth_in_Program_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youth in Program Report</label>
    <referenceTo>Youth_in_Program_Report__c</referenceTo>
    <relationshipLabel>PA Challenges</relationshipLabel>
    <relationshipName>PA_Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>